# boilerplate-fastapi-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.docker/: dockerfile
app/: __init__.py  main.py
app/healthcheck/api/: router.py
app/healthcheck/api/v1/: endpoints.py
app/schemas/: get_healthcheck_response.py
tests/: conftest.py
tests/app/api/: test_healthcheck.py
